# shellx

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  vcpkg.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
resources/: shellx.gresource.xml  style.css
src/: app.rs  config.rs  connection.rs  lib.rs  main.rs  ssh.rs  terminal.rs  theme.rs
tools/: cargo-runner.cmd  pkg-config.cmd  pkg-config.py
