[package]
name = "shellx"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
gtk = { package = "gtk4", version = "0.10.3", default-features = false }
portable-pty = "0.7.0"
relm4 = { version = "0.10.1", default-features = false, features = ["macros", "css"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "1.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
wezterm-ssh = "0.4.0"
wezterm-term = { git = "https://github.com/wez/wezterm.git", package = "wezterm-term", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
